@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-PPPort
 
 {{$NEXT}}
+          - Add override attribute
 
 0.008     2017-05-14 17:42:16+02:00 Europe/Paris
           - in the after_build phase, use the ppport.h file to print any
